# polybar

./: CMakeLists.txt
cmake/: 03-libs.cmake
cmake/common/: utils.cmake
cmake/modules/: FindLibiw.cmake
include/: common.hpp
include/adapters/: pulseaudio.hpp
include/components/: config.hpp
include/drawtypes/: animation.hpp  label.hpp
include/modules/: battery.hpp  network.hpp  pulseaudio.hpp  xworkspaces.hpp
include/modules/meta/: base.hpp  base.inl
include/utils/: string.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/adapters/: pulseaudio.cpp
src/components/: builder.cpp
src/drawtypes/: animation.cpp  label.cpp
src/modules/: battery.cpp  ipc.cpp  network.cpp  pulseaudio.cpp  xworkspaces.cpp
src/utils/: string.cpp
tests/unit_tests/utils/: string.cpp
